...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lJ8-ox-nBB">
                                <rect key="frame" x="8" y="28" width="359" height="76"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yzW-HL-cJ8">
                                        <rect key="frame" x="8" y="8" width="343" height="22"/>
                                        <accessibility key="accessibilityConfiguration" identifier="NameTxtFld"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="o1z-RR-iei"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GCC-Ol-Ngi">
                                        <rect key="frame" x="8" y="38" width="343" height="30"/>
                                        <color key="backgroundColor" red="0.086274509799999996" green="0.33725490200000002" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="StartBtn"/>
                                        <state key="normal" title="Start">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="startBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eJS-gZ-KxH"/>
                                        </connections>
...
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ls-Yf-c2u">
                                <rect key="frame" x="8" y="28" width="359" height="76"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5tr-2d-tlg">
                                        <rect key="frame" x="8" y="8" width="343" height="21"/>
                                        <accessibility key="accessibilityConfiguration" identifier="NameLbl"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OWx-av-cUu">
                                        <rect key="frame" x="8" y="47" width="343" height="21"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TimeLbl"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            <rect key="frame" x="0.0" y="0.0" width="115" height="120"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="2x5-xc-BGx">
                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="120"/>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="PixlrImgView"/>
                                                </imageView>
                                            </subviews>
                                        </view>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstItem="2x5-xc-BGx" firstAttribute="leading" secondItem="UJi-tk-t9G" secondAttribute="leading" id="VMP-c8-dbW"/>
...
