import Foundation
import UIKit

//MARK:- Storyboard
public let CollectionViewCellIdentifier = "ImageCell"

//MARK:- Other Configurable Parameters
public let MAX_NUMBER_OF_IMAGES = 9
public let STARTING_TIME: TimeInterval = 15
public let GUESS_WHERE_THIS_PHTO_WAS = "Guess where this photo was"
public let PLAY_AGAIN = "Play Again"
public let NAVIGATION_BAR_TITLE = "Guess the Image"
public let SPINNER_TITLE = "Please wait..."
public let ALERT_TITLE = "Congrats!"
public let ALERT_MESSAGE = "Your guess is correct."
public let ALERT_BUTTON_TITLE = "OK"

//MARK:- Images
public let PLACEHOLDER = #imageLiteral(resourceName: "placeholder")
public let FLIPPED = #imageLiteral(resourceName: "flipped")
public let BACKGROUND = #imageLiteral(resourceName: "background")
